--- a/backend/package.json
+++ b/backend/package.json
@@ -1,17 +1,25 @@
 {
-  "name": "backend",
+  "name": "inventory-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Inventory history backend (Express + Firebase Admin)",
+  "main": "src/index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "dev": "NODE_ENV=development nodemon src/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "dotenv": "^17.2.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "firebase-admin": "^13.5.0"
-  }
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  },
+  "license": "ISC"
 }
+
+
+
+
